DevOCL/src/objects/CLQ_Enrollment_Group__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Enrollment Group object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Full_Part_Time__c</fullName>
        <label>Full/Part Time</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Full_Part__c</fullName>
        <label>Full/Part</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Group_Name__c</fullName>
        <label>Group Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Infant__c</fullName>
        <inlineHelpText>Birth to &lt; 18 months</inlineHelpText>
        <label>No. of Infants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_No_of_Infants__c</fullName>
        <inlineHelpText>Birth to &lt; 18 months</inlineHelpText>
        <label>No. of Infants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_No_of_Older_Toddler__c</fullName>
        <inlineHelpText>30 months to &lt; 3 years</inlineHelpText>
        <label>No. of Older Toddler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_No_of_Preschool__c</fullName>
        <inlineHelpText>3 years to &lt; Kindergarten</inlineHelpText>
        <label>No. of Preschool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_No_of_School_Age__c</fullName>
        <inlineHelpText>Kindergarten to &lt; 15 years</inlineHelpText>
        <label>No. of School Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_No_of_Young_Toddler__c</fullName>
        <inlineHelpText>18 months to &lt; 30 months</inlineHelpText>
        <label>No. of Young Toddler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Older_Toddler__c</fullName>
        <inlineHelpText>30 months to &lt; 3 years</inlineHelpText>
        <label>No. of Older Toddler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Pre_School__c</fullName>
        <inlineHelpText>3 years to &lt; Kindergarten</inlineHelpText>
        <label>No. of Preschool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Room_Space__c</fullName>
        <label>Room/Space</label>
        <referenceTo>CLQ_Room_Space__c</referenceTo>
        <relationshipLabel>Enrollment Groups</relationshipLabel>
        <relationshipName>Enrollment_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CLQ_Younger_Toddler__c</fullName>
        <inlineHelpText>18 months to &lt; 30 months</inlineHelpText>
        <label>No. of Young Toddler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Enrollment Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>